--- a/frontend-leis/src/app/app.component.html
+++ b/frontend-leis/src/app/app.component.html
@@ -1,1 +1,14 @@
+<ul>
+    <li><a routerLink="/auth/login">Ir a Login</a></li>
+    <li><a routerLink="/auth/register">Ir a register</a></li>
+    <li><a routerLink="/dashboard">Dashboard</a></li>
+    <li><a routerLink="/equipment">Equipos</a></li>
+    <li><a routerLink="/loan">Préstamos</a></li>
+    <li><a routerLink="/laboratory">Laboratorios</a></li>
+    <li><a routerLink="/tool-experiment">Herramientas y Experimentos</a></li>
+    <li><a routerLink="/users">Usuarios</a></li>
+    <li><a routerLink="/statistics">Estadísticas</a></li>
+    <li><a routerLink="/report">Reportes</a></li>
+</ul>
+
 <router-outlet></router-outlet>
