--- a/frontend-leis/src/app/auth/pages/main/main.component.html
+++ b/frontend-leis/src/app/auth/pages/main/main.component.html
@@ -1,1 +1,13 @@
+<div class="menu__auth">
+    <div class="menu__img">
+        <img src="../../../../assets/logo_santoto_tunja_2022.png" alt="USTA" height="55px">
+    </div>
+    <div class="menu__links">
+        <a *ngFor="let item of items" [routerLink]="[item.routerLink]" routerLinkActive="router-link-active">
+            {{ item.label }}
+        </a>
+    </div>
+</div>
+
+<!-- Directiva de Enrutamiento  -->
 <router-outlet></router-outlet>
