--- a/frontend-leis/src/app/app.component.html
+++ b/frontend-leis/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ul>
+<!-- <ul class="ul__routes">
     <li><a routerLink="/auth/login">Ir a Login</a></li>
     <li><a routerLink="/auth/register">Ir a register</a></li>
     <li><a routerLink="/dashboard">Dashboard</a></li>
@@ -9,6 +9,6 @@
     <li><a routerLink="/users">Usuarios</a></li>
     <li><a routerLink="/statistics">Estadísticas</a></li>
     <li><a routerLink="/report">Reportes</a></li>
-</ul>
+</ul> -->
 
 <router-outlet></router-outlet>
