--- a/frontend-leis/src/app/auth/pages/login/login.component.html
+++ b/frontend-leis/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,91 @@
-<p>login works!</p>
+<div class="container fluid">
+    <div class="form__auth">
+        <div class="form__content">
+            <div class="mb-4 align-row-center">
+                <h1>Inicio de Sesión</h1>
+            </div>
+        
+        
+            <div class="row">
+                <div class="col-md-12">
+                    
+                    <div class="row">
+                        <small class="text-danger">* Indica Campos Obligatorios</small>
+                    </div>
+
+                    <!-- Asociar el formulario de HTML con el contenido de la clase del componente -->
+                    <form method="post" [formGroup]="loginForm" autocomplete="off">
+        
+                        <!-- Input Text de Email -->
+                        <div class="mb-3 row">
+                            <div class="col">
+                                <div class="my-3">
+                                    <label class="col-form-control">
+                                        Email <span class="text-danger">*</span>
+                                    </label>
+                                </div>
+                                <input type="text" class="form-control" formControlName="email" placeholder="Ingresa tu Email">
+                                <span class="form-text text-danger" *ngIf="isInvalidField('email')">
+                                    {{ emailError }}
+                                </span>
+                            </div>
+                        </div>
+        
+                        <!-- Input Text de Password -->
+                        <div class="mb-3 row">
+                            <div class="col">
+                                <div class="my-3 flex__label-input">
+                                    <label class="col-form-control">
+                                        Contraseña <span class="text-danger">*</span>
+                                    </label>
+                                    <label class="col-form-control pointer">
+                                        ¿Olvidaste tu contraseña?
+                                    </label>
+                                </div>
+                                
+                                <div class="flex__input">
+                                    <input [type]="showPassword ? 'text' : 'password'" class="form-control"
+                                        formControlName="password" placeholder="Ingresa tu Contraseña">
+                                    <button type="button" class="input__show" (click)="togglePassword()">
+                                        <i [class]="showPassword ? 'pi pi-eye-slash': 'pi pi-eye'"></i>
+                                    </button>
+                                </div>
+                                <span class="form-text text-danger" *ngIf="isInvalidField('password')">
+                                    Se debe ingresar una contraseña
+                                </span>
+                            </div>
+                        </div>
+        
+                        <!-- Botones de Inicio de Sesión -->
+                        <div class="row mt-4">
+                            <!-- Inicio de Sesión con Email y Password -->
+                            <div class="col-sm-12 mb-3">
+                                <button type="submit" (click)="login()" class="btn btn-primary form__btn">
+                                    Iniciar Sesión
+                                </button>
+                            </div>
+        
+                            <!-- Inicio de Sesión con Google -->
+                            <div class="col-sm-12">
+                                <button class="btn btn-dark form__btn">
+                                    <i class="pi pi-google mx-2"></i>
+                                    O inicia sesión con Google
+                                </button>
+                            </div>
+                        </div>
+        
+                        <!-- Redirecciona a la vista de registro -->
+                        <div class="row mt-4">
+                            <div class="col-sm-12 align-row-center">
+                                <label>¿No tienes una cuenta?</label>
+                                <a [routerLink]="['/auth/register']" routerLinkActive="router-link-active">
+                                    <label class="mx-2">Regístrate aquí</label>
+                                </a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
