--- a/frontend-leis/src/app/auth/pages/login/login.component.html
+++ b/frontend-leis/src/app/auth/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container fluid">
     <div class="form__auth">
-        <div class="form__content">
+        <div class="form__content animate__animated animate__fadeIn">
             <div class="mb-4 align-row-center">
                 <h1>Inicio de Sesión</h1>
             </div>
