--- a/frontend-leis/src/app/auth/pages/register/register.component.html
+++ b/frontend-leis/src/app/auth/pages/register/register.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="container fluid"> -->
 <div class="mt-5 container-fluid">
     <div class="form__auth">
-        <div class="form__content">
+        <div class="form__content animate__animated animate__fadeIn">
             <div class="mb-4 align-row-center">
                 <h1>Regístrate</h1>
             </div>
