Auth - Sticky Header

--- a/frontend-leis/src/app/auth/components/sticky-header/sticky-header.component.css
+++ b/frontend-leis/src/app/auth/components/sticky-header/sticky-header.component.css
@@ -1,53 +1,45 @@
-.menu__auth,
-.menu__links,
-.menu__img {
+.sticky__nav {
     align-items: center;
-    display: flex;
-    flex-direction: row;
-}
-
-.menu__auth {
     background: linear-gradient(rgb(10, 30, 78), rgb(8, 22, 56));
-    background: var(--royal-blue);
-    border-bottom: 3px solid var(--gold);
-    height: 70px;
-    justify-content: space-between;
-    padding: 0 100px;
+    border-bottom: 2px solid var(--gold);
+    display: flex;
+    flex-flow: row nowrap;
+    flex: 0 1 auto;
+    height: var(--sticky-height);
+    padding-inline: calc(var(--sticky-height) * 0.9);
     position: fixed;
-    top: 0;
-    transition: all .3s;
+    transition: all var(--duration);
     width: 100vw;
+    z-index: 10;
+}
+.sticky__nav.sticky {
+    height: var(--sticky-height-mini);
 }
 
 
-.menu__sticky {
-    height: 60px;
-    transition: all .3s;
-}
-
-
-.menu__img {
-    margin: 0 50px;
-}
-
-.menu__img,
-.menu__links {
+.auth__img {
+    flex: 1;
     height: 100%;
-    width: 50%;
+    padding: 10px;
+}
+.auth__img img {
+    height: 100%;
 }
 
-.menu__links {
-    justify-content: end;
-}
 
-.menu__links a {
-    color: white;
+.auth__links {
+    align-items: center;
+    display: inline-flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    width: calc(100vw * 0.2);
+}
+.auth__links a {
+    color: var(--text-light);
     font-size: 17.5px;
-    margin: 0 20px;
-    text-decoration: none;
 }
-
-.menu__links a:hover {
+.auth__links a.router-link-active,
+.auth__links a:hover {
     color: var(--gold);
-    transition: all 0.3s;
+    transition: all var(--duration);
 }
