--- a/frontend-leis/src/app/auth/components/sticky-header/sticky-header.component.html
+++ b/frontend-leis/src/app/auth/components/sticky-header/sticky-header.component.html
@@ -1,9 +1,12 @@
-<div class="menu__auth" [ngClass]="enableSticky ? 'menu__sticky' : ''" >
-    <div class="menu__img">
-        <img src="../../../../assets/logo_santoto_tunja_2022.png" alt="USTA" height="90%">
+<div class="sticky__nav" [class]="enableSticky ? 'sticky': ''">
+    <div class="auth__img">
+        <img src="../../../../assets/logo_santoto_tunja_2022.png" alt="USTA">
     </div>
-    <div class="menu__links">
-        <a *ngFor="let item of items" [routerLink]="[item.routerLink]" routerLinkActive="router-link-active">
+
+    <div class="auth__links">
+        <a *ngFor="let item of items" [routerLink]="item.routerLink" routerLinkActive="router-link-active"
+            [routerLinkActiveOptions]="{ exact: true }" #rla="routerLinkActive"
+            [class]="!rla ? 'router-link-active' : ''">
             {{ item.label }}
         </a>
     </div>
