--- a/frontend-leis/src/app/auth/pages/main/main.component.html
+++ b/frontend-leis/src/app/auth/pages/main/main.component.html
@@ -1,4 +1,7 @@
-<app-sticky-header></app-sticky-header>
-
-<!-- Directiva de Enrutamiento  -->
-<router-outlet></router-outlet>
+<div class="app__auth">
+    <app-sticky-header></app-sticky-header>
+    
+    <div class="content__auth">
+        <router-outlet></router-outlet>
+    </div>
+</div>
