--- a/frontend-leis/src/app/auth/pages/register/register.component.html
+++ b/frontend-leis/src/app/auth/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="container fluid"> -->
-<div class="mt-5 container-fluid">
-    <div class="form__auth">
+<div class="form__auth">
+    <div class="form__register">
         <div class="form__content animate__animated animate__fadeIn">
             <div class="mb-4 align-row-center">
                 <h1>Regístrate</h1>
@@ -111,16 +111,16 @@
                         <div class="row mt-4">
                             <!-- Registro de nueva cuenta -->
                             <div class="col-sm-12 mb-3">
-                                <button type="submit" (click)="register()" class="btn btn-primary form__btn">
+                                <button type="submit" (click)="register()" class="btn btn__auth form__btn">
                                     Regístrate
                                 </button>
                             </div>
 
                             <!-- Registro con Google -->
                             <div class="col-sm-12">
-                                <button class="btn btn-dark form__btn">
+                                <button class="btn btn__google form__btn">
                                     <i class="pi pi-google mx-2"></i>
-                                    O inicia sesión con Google
+                                    Ingresa con Google
                                 </button>
                             </div>
                         </div>
