--- a/frontend-leis/src/app/protected/pages/main/main.component.html
+++ b/frontend-leis/src/app/protected/pages/main/main.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="app">
+    <app-sidenav></app-sidenav>
+
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
