--- a/frontend-leis/src/app/auth/pages/register/register.component.html
+++ b/frontend-leis/src/app/auth/pages/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="form__register">
         <div class="form__content animate__animated animate__fadeIn">
             <div class="mb-4 align-row-center">
-                <h1>Regístrate</h1>
+                <h1 class="mb-4">Regístrate</h1>
             </div>
 
             <div class="row">
