--- a/frontend-leis/src/app/auth/pages/login/login.component.html
+++ b/frontend-leis/src/app/auth/pages/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="form__login">
         <div class="form__content animate__animated animate__fadeIn">
             <div class="mb-4 align-row-center">
-                <h1>Inicio de Sesión</h1>
+                <h1 class="mb-4">Inicio de Sesión</h1>
             </div>
 
 
