--- a/frontend-leis/src/app/protected/pages/main/main.component.html
+++ b/frontend-leis/src/app/protected/pages/main/main.component.html
@@ -1,7 +1,8 @@
 <div class="app">
-    <app-sidenav></app-sidenav>
+    <app-sidenav [isCollapsed]="isCollapsedSidenav" [showTooltipUser]="showTooltipUser"></app-sidenav>
 
     <div class="content">
+        <app-breadcrumb [showNotification]="showBreadcrumbMessages"></app-breadcrumb>
         <router-outlet></router-outlet>
     </div>
 </div>
