--- a/frontend-leis/src/app/protected/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/frontend-leis/src/app/protected/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard" id="dashboard">
-    <app-title [title]="'Dashboard'"></app-title>
+    <app-title [title]="'Inicio'"></app-title>
 
     <div class="dashboard__items">
         <app-card-icons *ngFor="let item of items; let i = index" [id]="'card-item-'+i" [icon]="item.icon!"
