--- a/frontend-leis/src/app/protected/modules/loan/pages/loan-request/loan-request.component.html
+++ b/frontend-leis/src/app/protected/modules/loan/pages/loan-request/loan-request.component.html
@@ -159,6 +159,53 @@
         <div class="card-body">
           <div class="card-title">
             <button type="submit" class="btn btn-dark">Solicitar</button>
+            <div
+              class="modal fade"
+              id="modalSolicitar"
+              tabindex="-1"
+              aria-hidden="true"
+              aria-labelledby="modalTitle"
+              data-bs-backdrop="static"
+            >
+              <div
+                class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+              >
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">
+                      Solicitud Realizada con Éxito
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <label class="form-label">ID de la solicitud: </label>
+                    <p>123456</p>
+                    <label class="form-label">Codigo de la solicitud:</label>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Cerrar
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      data-bs-dismiss="modal"
+                    >
+                      Aceptar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
