--- a/frontend-leis/src/app/protected/shared/title/title.component.css
+++ b/frontend-leis/src/app/protected/shared/title/title.component.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    margin: 0 15px;
+    margin: 2rem;
     padding: 0 3%;
     width: 100%;
 }
