--- a/frontend-leis/src/app/protected/modules/equipment/pages/technical-data-sheets/technical-data-sheets.component.html
+++ b/frontend-leis/src/app/protected/modules/equipment/pages/technical-data-sheets/technical-data-sheets.component.html
@@ -1,1 +1,17 @@
-<p>technical-data-sheets works!</p>
+<div>
+
+</div>
+
+<div class="equipmentadmin2">
+  <div class="col-4">
+  <mat-card style="margin-left: 600px; margin-top: 60px; width: 50%; text-align: center;"> Data de Recursos Humanos</mat-card>
+</div>
+
+<div class="margin-left:30px; width:80%">
+  <mat-card >
+    <mat-card style="margin: 2rem auto; width: 70%;">
+      <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html" style="width: 100%; height: 700px" frameborder="0"></iframe>
+    </mat-card>
+  </mat-card>
+</div>
+</div>
