--- a/frontend-leis/src/app/protected/modules/loan/pages/loan-request/loan-request.component.html
+++ b/frontend-leis/src/app/protected/modules/loan/pages/loan-request/loan-request.component.html
@@ -1,10 +1,6 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"> Préstamo de Equipos (Solicitud) </a>
-</nav>
-
 <div class="container">
   <div class="row">
-    <div class="col-sm-5 mt-4">
+    <div class="col-sm-5 mt-5">
       <div class="card">
         <div class="card-body">
           <div class="card-title">
@@ -17,6 +13,7 @@
                 type="text"
                 placeholder="Inserte el codigo de inventario"
                 class="form-control"
+                required
               />
             </div>
             <br />
@@ -89,7 +86,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-5 mt-4">
+    <div class="col-sm-5 mt-5">
       <div class="card">
         <div class="card-body">
           <div class="card-title">
@@ -154,11 +151,18 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-1 mt-4">
+    <div class="col-sm-1 mt-5">
       <div class="card">
         <div class="card-body">
           <div class="card-title">
-            <button type="submit" class="btn btn-dark">Solicitar</button>
+            <button
+              type="button"
+              class="btn btn-dark"
+              data-bs-toggle="modal"
+              data-bs-target="#modalSolicitar"
+            >
+              Solicitar
+            </button>
             <div
               class="modal fade"
               id="modalSolicitar"
